--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
 
           echo "Rebuilding and restarting..."
           docker compose down
-          docker compose up --build -d
+          docker compose -f docker-compose.yml -f docker-compose.prod.yml up --build -d
 
           echo "Deployment complete."
         EOF
