--- a/alarino_nginx.conf
+++ b/alarino_nginx.conf
@@ -1,6 +1,15 @@
 server {
     listen 80;
     server_name alarino.com www.alarino.com;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name alarino.com www.alarino.com;
+
+    ssl_certificate /etc/letsencrypt/live/alarino.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/alarino.com/privkey.pem;
 
     location / {
         proxy_pass http://backend:5001;
