--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
   nginx:
     image: nginx:latest
     volumes:
-      - ./alarino_nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/prod.conf:/etc/nginx/conf.d/default.conf:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     ports:
       - "80:80"
       - "443:443"
