--- a/alarino_frontend/package.json
+++ b/alarino_frontend/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
     "@tailwindcss/cli": "^4.1.7",
+    "@tailwindcss/typography": "^0.5.16",
     "tailwindcss": "^4.1.7"
   },
-
   "scripts": {
-    "dev:css": "tailwindcss -i src/css/input.css -o src/css/main.css --watch",
-    "build:css": "tailwindcss -i src/css/input.css -o src/css/main.css --minify"
+    "dev:css": "tailwindcss -i src/css/input.css -o src/static/main.css --watch",
+    "build:css": "tailwindcss -i src/css/input.css -o src/static/main.css --minify"
   }
 }
