--- a/alarino_frontend/package.json
+++ b/alarino_frontend/package.json
@@ -5,7 +5,7 @@
     "tailwindcss": "^4.1.7"
   },
   "scripts": {
-    "dev:css": "tailwindcss -i src/css/input.css -o src/static/main.css --watch",
-    "build:css": "tailwindcss -i src/css/input.css -o src/static/main.css --minify"
+    "dev:css": "tailwindcss -i src/css/input.css -o dist/css/main.css --watch",
+    "build:css": "tailwindcss -i src/css/input.css -o dist/css/main.css --minify"
   }
 }
