--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,3 +3,4 @@ services:
     volumes:
       - ./nginx/prod.conf:/etc/nginx/conf.d/default.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
+      - /var/www/certbot:/var/www/certbot
