--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,10 @@
 services:
-  nginx:
-    volumes:
-      - ./nginx/prod.conf:/etc/nginx/conf.d/default.conf:ro
-      - /etc/letsencrypt:/etc/letsencrypt:ro
-      - /var/www/certbot:/var/www/certbot
+  backend:
+    ports:
+      - "5001:5001"
+
+  frontend:
+    ports:
+      - "80:3000"
+    environment:
+      FRONTEND_SITE_URL: https://alarino.com
