logging ports used

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,10 +1,12 @@
 services:
   backend:
     ports:
+      # host:container (local direct backend access)
       - "5001:5001"
 
   frontend:
     ports:
+      # host:container (local web app access)
       - "3000:3000"
     environment:
       FRONTEND_SITE_URL: http://localhost:3000
