--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - ./alarino_backend/.env
     restart: always
     expose:
+      # backend container port inside compose network
       - "5001"
 
   frontend:
@@ -20,4 +21,5 @@ services:
       FRONTEND_SITE_URL: ${FRONTEND_SITE_URL:-https://alarino.com}
     restart: always
     expose:
+      # frontend container port inside compose network
       - "3000"
