--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,12 @@
 FROM node:20-alpine AS deps
 WORKDIR /app
-COPY package.json ./
-RUN npm install
+COPY package.json package-lock.json ./
+RUN npm ci --no-audit --no-fund
 
 FROM node:20-alpine AS builder
 WORKDIR /app
+ENV NEXT_TELEMETRY_DISABLED=1
+ENV NODE_OPTIONS=--max-old-space-size=384
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 RUN npm run build
